hphp/hack/test/typecheck/docs_url_bad_arity.php
<?hh

<<__Docs("http://example.com", "foo")>>
class Foo {}
